@@ -51,9 +51,9 @@ copyright = u'2012, Modelon AB'
 # built documents.
 #
 # The short X.Y version.
-version = '2.18.1'
+version = '2.18.2'
 # The full version, including alpha/beta/rc tags.
-release = '2.18.1'
+release = '2.18.2'
 
 # The language for content autogenerated by Sphinx. Refer to documentation
 # for a list of supported languages.
